--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ python-multipart
 
 
 
--f https://download.pytorch.org/whl/cpu/torch_stable.html
+-f https://download.pytorch.org/whl/torch_stable.html
 numpy
 scipy
 scikit-learn
@@ -19,13 +19,13 @@ gunicorn
 python-multipart
 uvloop
 httptools
-torch==1.10.2+cpu
-torchvision==0.11.3+cpu
-torchaudio==0.10.2+cpu
+torch==1.10.0+cu111 
+torchvision==0.11.0+cu111 
+torchaudio==0.10.0
 opencv-python-headless
 # opencv-python
 # mmcv-full
-mmcv-full==1.4 -f https://download.openmmlab.com/mmcv/dist/cpu/torch1.10.0/index.html
+mmcv-full==1.4 -f https://download.openmmlab.com/mmcv/dist/cu111/torch1.10.0/index.html
 
 
 ######mmdet
@@ -40,7 +40,7 @@ terminaltables
 ######mmpose
 
 chumpy
-dataclasses; python_version == '3.7'
+dataclasses; python_version == '3.8'
 json_tricks
 matplotlib
 munkres
@@ -66,3 +66,5 @@ prettytable
 sqlalchemy
 psycopg2-binary
 # supervisor==4.1.0
+
+openpyxl
